--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>Ramesh Construction</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -15,6 +14,18 @@
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
     color: #818181;
+  }
+  
+  @media(min-width: 200px) and (max-width:545px){
+	h1 {
+		font-size: 50px !important;
+	}
+  }
+  
+  @media(min-width: 200px) and (max-width:526px){
+	img {
+	
+	}
   }
   h2 {
     font-size: 24px;
@@ -36,7 +47,8 @@
   p {
 	color: black;
   }
-  .jumbotron {
+  @media(min-width: 770px){
+	.jumbotron {
     /*background-color: #f4511e;*/
     color: #fff;
     padding: 100px 25px;
@@ -47,6 +59,36 @@
      background-position: inherit;
     background-size: 100% 50%;
   }
+  }
+  
+  @media(min-width: 500px) and (max-width:769px){
+	.jumbotron {
+    /*background-color: #f4511e;*/
+    color: #fff;
+    padding: 100px 25px;
+    font-family: Montserrat, sans-serif;
+	background-image: url("./assets/images/new-york-city-nights.png");
+	background-repeat: no-repeat;
+  background-attachment: fixed;
+     background-position: inherit;
+    background-size: 100% 100%;
+  }
+  }
+  
+  @media(min-width: 240px) and (max-width:499px){
+	.jumbotron {
+    /*background-color: #f4511e;*/
+    color: #fff;
+    padding: 100px 25px;
+    font-family: Montserrat, sans-serif;
+	background-image: url("./assets/images/new-york-city-nights.png");
+	background-repeat: no-repeat;
+  background-attachment: fixed;
+     background-position: inherit;
+    background-size: 100% 58%;
+  }
+  }
+  
   .container-fluid {
     padding: 20px 50px;
   }
@@ -267,19 +309,19 @@
   <div class="row slideanim">
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-off logo-small"></span>-->
-	  <img src="./assets/images/Construction.jpeg" width="400" height="300">
+	  <img src="./assets/images/construction.jpeg" width="100%" height="300" max-width="400px">
       <h4>CONSTRUCTION</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-heart logo-small"></span>-->
-      <img src="./assets/images/Architecture.jpeg" width="400" height="300">
+      <img src="./assets/images/Architecture.jpeg" width="100%" height="300" max-width="400px">
 	  <h4>ARCHITECTURE</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-lock logo-small"></span>-->
-	  <img src="./assets/images/Interior.jpeg" width="400" height="300">
+	  <img src="./assets/images/Interior.jpeg" width="100%" height="300" max-width="400px">
       <h4>INTERIOR DESIGNING</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
